# robotics-software-community

1-temperature-monitor/temp_ws/install/: local_setup.sh  setup.sh
1-temperature-monitor/temp_ws/install/temp_bringups/share/temp_bringups/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
1-temperature-monitor/temp_ws/install/temp_bringups/share/temp_bringups/cmake/: temp_bringupsConfig.cmake
1-temperature-monitor/temp_ws/install/temp_client/share/temp_client/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
1-temperature-monitor/temp_ws/install/temp_interface/share/temp_interface/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
1-temperature-monitor/temp_ws/install/temp_interface/share/temp_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_temp_interface__rosidl_generator_cExport-noconfig.cmake  export_temp_interface__rosidl_generator_cExport.cmake  export_temp_interface__rosidl_generator_cppExport.cmake  export_temp_interface__rosidl_generator_pyExport-noconfig.cmake  export_temp_interface__rosidl_generator_pyExport.cmake  rosidl_cmake-extras.cmake  (+15 more)
1-temperature-monitor/temp_ws/log/: latest_build
1-temperature-monitor/temp_ws/src/: docker-compose.yaml
1-temperature-monitor/temp_ws/src/temp_bringups/: CMakeLists.txt  package.xml
1-temperature-monitor/temp_ws/src/temp_bringups/config/: temp_range.yaml
1-temperature-monitor/temp_ws/src/temp_bringups/launch/: temp_pub-sub-containers.launch.py  temp_pub-sub.launch.py
1-temperature-monitor/temp_ws/src/temp_client/: Dockerfile  setup.cfg  setup.py
1-temperature-monitor/temp_ws/src/temp_client/temp_client/: temp_pub.py
1-temperature-monitor/temp_ws/src/temp_interface/: CMakeLists.txt  package.xml
1-temperature-monitor/temp_ws/src/temp_interface/msg/: Temperature.msg
1-temperature-monitor/temp_ws/src/temp_server/: CMakeLists.txt  Dockerfile  package.xml
1-temperature-monitor/temp_ws/src/temp_server/include/temp_server/: sub.hpp
1-temperature-monitor/temp_ws/src/temp_server/src/: sub.cpp  temp_sub.cpp
(+29 files in other folders)
